Fix some layout issues

--- a/SCSS/components/_invite-btn.scss
+++ b/SCSS/components/_invite-btn.scss
@@ -12,10 +12,6 @@
 	padding: 0.65rem 1.45rem;
 	position: relative;
 
-	@include set-mobile-responsive-layout(map-get($breakpoints, 'medium')) {
-		display: none;
-	}
-
 	&:hover {
 		@extend %btn-hover;
 	}
