--- a/SCSS/sections/_navigation-bar.scss
+++ b/SCSS/sections/_navigation-bar.scss
@@ -5,23 +5,29 @@ nav {
 	justify-content: space-between;
 	padding: 1.5rem {
 		bottom: 1rem;
-	};
-	@include set-position("sticky", 0);
+	}
+	@include set-position('sticky', 0);
 	z-index: 2;
-	background-color: map-get($map: $neutral-colors, $key: "White");
+	background-color: map-get($map: $neutral-colors, $key: 'White');
 
-
-	@include set-responsive-layout(map-get($breakpoints, "medium")) {
+	@include set-responsive-layout(map-get($breakpoints, 'medium')) {
 		.bank-logo {
 			height: fit-content;
 			align-self: center;
 		}
 
-		.navigation-menu, .request-invite-btn {
+		.navigation-menu,
+		.request-invite-btn {
 			margin-inline: 0;
 		}
 
 		justify-content: space-around;
 		padding: 0.5rem;
+	}
+
+	@include set-mobile-responsive-layout(map-get($breakpoints, 'medium')) {
+		.request-invite-btn {
+			display: none;
+		}
 	}
 }
